# drugs-data-pipeline

./: README.md
airflow-drugs-data-pipeline/: Dockerfile  requirements.txt
airflow-drugs-data-pipeline/.astro/: config.yaml
airflow-drugs-data-pipeline/conf/airflow/: catalog.yml
airflow-drugs-data-pipeline/dags/: drugs_data_pipeline_airflow_dag.py
airflow-drugs-data-pipeline/data/02_intermediate/: most_mentioning_journal.json  output_graph_nodes.csv  output_graph_relationships.csv  preprocessed_clinical_trials.csv  preprocessed_pubmed.csv
airflow-drugs-data-pipeline/data/03_output/: drugs_journal_liaison_graphe.json  graph_nodes.json  graph_relationships.json  traitement_adhoc_1.json
drugs-data-pipeline/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
drugs-data-pipeline/.viz/: stats.json
drugs-data-pipeline/conf/: logging.yml
drugs-data-pipeline/conf/base/: catalog.yml
drugs-data-pipeline/src/drugs_data_pipeline/: __init__.py  __main__.py  pipeline_registry.py  settings.py
drugs-data-pipeline/src/drugs_data_pipeline/pipelines/: nodes.py  pipeline.py
drugs-data-pipeline/src/drugs_data_pipeline/pipelines/nodes/: extract_node.py  load_node.py  transform_node.py
drugs-data-pipeline/tests/: test_run.py
